--- a/AUTHORS
+++ b/AUTHORS
@@ -2,12 +2,15 @@ Anselmo L. S. Melo <anselmo.melo@intel.com>
 Bruno Bottazzini <bruno.bottazzini@intel.com>
 Bruno Dilly <bruno.dilly@intel.com>
 Caio Marcelo de Oliveira Filho <caio.oliveira@intel.com>
+Chao Jie Gu <chao.jie.gu@intel.com>
 Ederson de Souza <ederson.desouza@intel.com>
 Flavio Ceolin <flavio.ceolin@intel.com>
+Gabriel Schulhof <gabriel.schulhof@intel.com>
 Guilherme Iscaro de Godoy <guilherme.iscaro@intel.com>
 Gustavo Lima Chaves <gustavo.lima.chaves@intel.com>
 Gustavo Sverzut Barbieri <gustavo.barbieri@intel.com>
 Iván Briano <ivan.briano@intel.com>
+Jesus Sanchez-Palencia <jesus.sanchez-palencia@intel.com>
 José Roberto de Souza <jose.souza@intel.com>
 Leandro Dorileo <leandro.maciel.dorileo@intel.com>
 Leandro Pereira <leandro.pereira@intel.com>
@@ -18,6 +21,8 @@ Murilo Belluzzo <murilo.belluzzo@intel.com>
 Otavio Pontes <otavio.pontes@intel.com>
 Ricardo de Almeida Gonzaga <ricardo.gonzaga@intel.com>
 Rodrigo Chiossi <rodrigo.chiossi@intel.com>
+Thiago Macieira <thiago.macieira@intel.com>
 Tomaz Canabrava <tomaz.canabrava@intel.com>
 Ulisses Furquim <ulisses.furquim@intel.com>
 Vinicius Costa Gomes <vinicius.gomes@intel.com>
+Zoltan Kis <zoltan.kis@intel.com>
