--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 Anselmo L. S. Melo <anselmo.melo@intel.com>
 Bruno Bottazzini <bruno.bottazzini@intel.com>
 Bruno Dilly <bruno.dilly@intel.com>
+Bruno Melo <bsilva.melo@gmail.com>
 Caio Marcelo de Oliveira Filho <caio.oliveira@intel.com>
 Chao Jie Gu <chao.jie.gu@intel.com>
 Ederson de Souza <ederson.desouza@intel.com>
@@ -14,6 +15,7 @@ Jesus Sanchez-Palencia <jesus.sanchez-palencia@intel.com>
 José Roberto de Souza <jose.souza@intel.com>
 Leandro Dorileo <leandro.maciel.dorileo@intel.com>
 Leandro Pereira <leandro.pereira@intel.com>
+Lei Yang <lei.a.yang@intel.com>
 Lucas De Marchi <lucas.demarchi@intel.com>
 Luis Felipe Strano Moraes <luis.strano@intel.com>
 Luiz Ywata <luizg.ywata@intel.com>
@@ -21,8 +23,11 @@ Murilo Belluzzo <murilo.belluzzo@intel.com>
 Otavio Pontes <otavio.pontes@intel.com>
 Ricardo de Almeida Gonzaga <ricardo.gonzaga@intel.com>
 Rodrigo Chiossi <rodrigo.chiossi@intel.com>
+Srinivasa Ragavan <srinivasa.ragavan.venkateswaran@intel.com>
+Sudarsana Nagineni <sudarsana.nagineni@intel.com>
 Thiago Macieira <thiago.macieira@intel.com>
 Tomaz Canabrava <tomaz.canabrava@intel.com>
 Ulisses Furquim <ulisses.furquim@intel.com>
 Vinicius Costa Gomes <vinicius.gomes@intel.com>
+Vladimir Cernov <cernov.vladimir@gmail.com>
 Zoltan Kis <zoltan.kis@intel.com>
