Update authors page
Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Amanda Coelho <amanda.winder.ribeiro.coelho@intel.com>
 Anselmo L. S. Melo <anselmo.melo@intel.com>
 Bruno Bottazzini <bruno.bottazzini@intel.com>
 Bruno Dilly <bruno.dilly@intel.com>
@@ -13,6 +14,7 @@ Gustavo Sverzut Barbieri <gustavo.barbieri@intel.com>
 Iván Briano <ivan.briano@intel.com>
 Jesus Sanchez-Palencia <jesus.sanchez-palencia@intel.com>
 José Roberto de Souza <jose.souza@intel.com>
+Kamidi Preetham <kamidi@live.com>
 Leandro Dorileo <leandro.maciel.dorileo@intel.com>
 Leandro Pereira <leandro.pereira@intel.com>
 Lei Yang <lei.a.yang@intel.com>
@@ -30,4 +32,6 @@ Tomaz Canabrava <tomaz.canabrava@intel.com>
 Ulisses Furquim <ulisses.furquim@intel.com>
 Vinicius Costa Gomes <vinicius.gomes@intel.com>
 Vladimir Cernov <cernov.vladimir@gmail.com>
+wanghongjuan <hongjuanx.wang@intel.com>
+Yong Li <yong.b.li@intel.com>
 Zoltan Kis <zoltan.kis@intel.com>
