Probably the last update on authors list before V1
Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -33,5 +33,6 @@ Ulisses Furquim <ulisses.furquim@intel.com>
 Vinicius Costa Gomes <vinicius.gomes@intel.com>
 Vladimir Cernov <cernov.vladimir@gmail.com>
 wanghongjuan <hongjuanx.wang@intel.com>
+Wu Zheng <wu.zheng@intel.com>
 Yong Li <yong.b.li@intel.com>
 Zoltan Kis <zoltan.kis@intel.com>
